--- a/src/App.css
+++ b/src/App.css
@@ -114,7 +114,14 @@ p {
     min-height: 600px;
     max-height: 600px;
     position: relative;
+}
+.setting1:nth-child(1){
+    min-width: 600px;
+    max-width: 600px;
+    min-height: 600px;
+    max-height: 600px;
     overflow: scroll;
+
 }
 
 .setting{
